@@ -1,3 +1,9 @@
+2006-08-20  Tor Lillqvist  <tml@novell.com>
+
+	* glib/gnulib/vasnprintf.c (vasnprintf): Fix crash when printing
+	large 64-bit values on Win32 using the %I64x format. (#351034,
+	Neil Piercy)
+
 2006-06-14  Tor Lillqvist  <tml@novell.com>
 
 	* glib/gutils.c (g_listenv): Add Windows notes to doc comment.
